# termix

./: .gitignore  AGENTS.md  README.md  README_CN.md  package.json  pnpm-lock.yaml
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  release.yml
docs/: TERMIX_V1_CHECKLIST.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: connection.rs  keychain.rs  local_terminal.rs  mod.rs  settings.rs  sftp.rs  ssh.rs  sync.rs
src-tauri/src/services/: credential_store.rs  crypto.rs  db.rs  local_terminal.rs  logger.rs  mod.rs  port_forward.rs  sftp_manager.rs  ssh_manager.rs  webdav.rs
src/components/connection/: ConnectionProgress.tsx  HostDetail.tsx  HostList.tsx
src/components/keychain/: KeychainDetail.tsx  KeychainList.tsx
src/components/layout/: CommandPalette.tsx  ListPage.tsx  MobileHome.tsx  NavSidebar.tsx  SettingsDialog.tsx  TitleBar.tsx
src/components/logs/: LogViewer.tsx  LogsList.tsx
src/components/sftp/: DeleteConfirmDialog.tsx  FilePanel.tsx  FileTable.tsx  HostSelector.tsx  NewFolderDialog.tsx  PanelModal.tsx  RenameDialog.tsx  SftpPage.tsx  TransferBar.tsx
src/components/snippet/: SnippetDetail.tsx  SnippetList.tsx
src/components/terminal/: SnippetAutocomplete.tsx  Terminal.tsx
src/components/ui/: layout-toggle.tsx
src/hooks/: use-connection.ts  use-context-menu.ts  use-long-press.ts  use-snippet-autocomplete.ts  use-updater.ts
src/lib/: logger.ts  session-data-bridge.ts  tauri.ts  terminal-registry.ts  terminal-themes.ts  transfer.ts  utils.ts
src/stores/: connection-store.ts  keychain-store.ts  session-store.ts  settings-store.ts  sftp-store.ts  snippet-store.ts  transfer-store.ts  ui-store.ts
