[package]
name = "termix"
version = "0.1.0"
description = "A modern cross-platform SSH client"
authors = ["you"]
edition = "2021"

[lib]
name = "termix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
keyring = { version = "3", features = [] }
aes-gcm = "0.10"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
portable-pty = "0.9"

