[package]
name = "termix"
version = "0.1.0"
description = "A modern cross-platform SSH client"
authors = ["you"]
edition = "2021"

[lib]
name = "termix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
aes-gcm = "0.10"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "p521", "rsa", "rand_core", "std", "getrandom", "encryption"] }
argon2 = "0.5"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
tauri-plugin-log = "2"
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
portable-pty = "0.9"
dirs = "6"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2"

